# f1-analytics-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: f1_pipeline_dag.py
dbt/f1_pipeline/: dbt_project.yml  profiles.yml
dbt/f1_pipeline/models/marts/: mart_constructor_standings.sql  mart_driver_standings.sql  mart_race_results.sql  marts.yml
dbt/f1_pipeline/models/staging/: sources.yml  stg_constructor_standings.sql  stg_constructors.sql  stg_driver_standings.sql  stg_drivers.sql  stg_race_results.sql  stg_race_weather.sql
dbt/f1_pipeline/snapshots/: snap_driver_standings.sql
dbt/f1_pipeline/tests/: assert_points_non_negative.sql
docs/: decisions.md
exploration/: explore_fastf1.py  explore_jolpica.py  list_gcs.py
ingestion/: fastf1_pipeline.py  gcs_to_bigquery.py  jolpica_pipeline.py
streamlit/: app.py  requirements.txt
streamlit/.streamlit/: config.toml  secrets.toml.example
streamlit/pages/: 1_season_overview.py  2_race_results.py  3_championship_battle.py  4_constructor_battle.py  5_driver_profile.py
streamlit/utils/: bigquery.py  styles.py
tests/: test_fastf1_pipeline.py  test_jolpica_pipeline.py
