[project]
name = "f1-analytics-pipeline"
version = "0.1.0"
description = "End-to-end F1 analytics pipeline: FastF1 + OpenWeatherMap + Ergast → GCS → BigQuery → dbt → Streamlit"
requires-python = ">=3.11"

dependencies = [
    "fastf1>=3.4",
    "dlt[gcs,bigquery]>=1.4",
    "google-cloud-storage>=2.16",
    "google-cloud-bigquery>=3.20",
    "pyarrow>=16.0",
    "python-dotenv>=1.0",
    "dbt-bigquery>=1.11.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
